Icons and splashscreen

--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>nativeDroid II - jQueryMobile Template</title>
+		<title>tweetdrafter</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-
+		<meta charset="UTF-8">
 		<link rel="stylesheet" href="css/font-awesome.min.css" />
 		<link rel="stylesheet" href="css/jquery.mobile.min.css" />
 		<link rel="stylesheet" href="vendor/waves/waves.min.css" />
 		<link rel="stylesheet" href="vendor/wow/animate.css" />
 		<link rel="stylesheet" href="css/nativedroid2.css" />
 		<link rel="stylesheet" href="css/tweetdrafter.css">
-
 		<meta name="mobile-web-app-capable" content="yes">
 	 	<meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <script src="js/jquery-1.12.4.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
 		<script src="js/jquery.mobile.min.js"></script>
-
 	</head>
+	
 	<body>
 		<div id="pageone" data-role="page">
 			<div data-role="header" data-position="fixed">
