Removed unused files

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
+<!--
+	Guido Emiliano Tálamo
+	DWM2A - 2017
+	Profesor Omar Toyos
+-->
 <!DOCTYPE HTML>
 <html>
 	<head>
 		<title>tweetdrafter</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="css/font-awesome.min.css" />
 		<link rel="stylesheet" href="css/jquery.mobile.min.css" />
 		<link rel="stylesheet" href="vendor/waves/waves.min.css" />
 		<link rel="stylesheet" href="vendor/wow/animate.css" />
@@ -70,9 +74,7 @@
 
 		<script src="vendor/waves/waves.min.js"></script>
 		<script src="vendor/wow/wow.min.js"></script>
-		<script src="js/jquery.mobile.toast.min.js"></script>
 		<script src="js/nativedroid2.js"></script>
-		<script src="js/nd2settings.js"></script>
 		<script src="js/clipboard.min.js"></script>
 		<script src="js/tweetdrafter.js"></script>
 
