Waves effect fix

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 				<span id="charcount" style="text-align: right; display: block; margin-right: 1em"></span>
 			</div>
 		</div>
-
+		
+		<script src="js/nd2settings.js"></script>
 		<script src="vendor/waves/waves.min.js"></script>
 		<script src="vendor/wow/wow.min.js"></script>
 		<script src="js/nativedroid2.js"></script>
