Lowercase logo on side drawer

--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-<!--
-	Guido Emiliano Tálamo
-	DWM2A - 2017
-	Profesor Omar Toyos
--->
 <!DOCTYPE HTML>
 <html>
 	<head>
@@ -20,6 +15,11 @@
     <script src="js/jquery-1.12.4.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
 		<script src="js/jquery.mobile.min.js"></script>
+		<!--
+		Guido Emiliano Tálamo
+		DWM2A - 2017
+		Profesor Omar Toyos
+	-->
 	</head>
 	
 	<body>
@@ -46,7 +46,7 @@
 
 			<div data-role="panel" id="leftpanel" data-display="overlay"> 
 				<img src="res/assets/tweetdrafter.png" alt="Tweetdrafter">
-				<h1>Tweetdrafter</h1>
+				<h1>tweetdrafter</h1>
 				<ul>
 					<li>Guido Emiliano Tálamo</li>
 					<li>DWM2A - 2017</li>
