--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 		<script src="js/jquery-1.12.4.min.js"></script>
-		<script src="js/jquery-ui.min.js"></script>
 		<script src="js/jquery.mobile.min.js"></script>
+		<script src="js/clipboard.min.js" async></script>
+		<script src="vendor/waves/waves.min.js" async></script>
+		<script src="vendor/wow/wow.min.js" async></script>
 		<!--
 		Guido Emiliano Tálamo
 		DWM2A - 2017
@@ -73,10 +75,7 @@
 		</div>
 		
 		<script src="js/nd2settings.js"></script>
-		<script src="vendor/waves/waves.min.js"></script>
-		<script src="vendor/wow/wow.min.js"></script>
 		<script src="js/nativedroid2.js"></script>
-		<script src="js/clipboard.min.js"></script>
 		<script src="js/tweetdrafter.js"></script>
 
 	</body>
