--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<ul data-role="listview" id="tweetlist">
 				</ul>
 			</div>
-			<a id="newtweet" href="#pagetwo" style="position:fixed; right: 1em; bottom: 1em;" class="ui-btn ui-btn-inline ui-btn-fab ui-btn-raised clr-primary waves-effect waves-button waves-effect waves-button"><i class="zmdi zmdi zmdi-plus zmd-2x"></i></a>
+			<a id="newtweet" href="#pagetwo" class="ui-btn ui-btn-inline ui-btn-fab ui-btn-raised clr-primary waves-effect waves-button waves-effect waves-button"><i class="zmdi zmdi zmdi-plus zmd-2x"></i></a>
 
 			<div data-role="popup" id="actions">
 				<div data=role="content">
@@ -69,8 +69,8 @@
 			</div>
 
 			<div data-role="main">
-				<textarea rows="14" name="textarea" id="textarea" autofocus style="margin:auto;padding:1em;font-size:1.6em;line-height:120%;font-family:serif;resize:none;" data-autogrow="false"></textarea>
-				<span id="charcount" style="text-align: right; display: block; margin-right: 1em"></span>
+				<textarea rows="14" name="textarea" id="textarea" autofocus data-autogrow="false"></textarea>
+				<span id="charcount"></span>
 			</div>
 		</div>
 		
