--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<a id="newtweet" href="#pagetwo" class="ui-btn ui-btn-inline ui-btn-fab ui-btn-raised clr-primary waves-effect waves-button waves-effect waves-button"><i class="zmdi zmdi zmdi-plus zmd-2x"></i></a>
 
 			<div data-role="popup" id="actions">
-				<div data=role="content">
+				<div>
 					<p id="popuptweet"></p>
 					<a id="tweetlink" data-role="button" class=" ui-btn-primary waves-effect waves-button waves-effect waves-button" data-clipboard-action="copy" data-clipboard-target="#ghosttweet">Twittear</a>
 			    <a id="copybtn" data-role="button" class=" ui-btn-primary waves-effect waves-button waves-effect waves-button" data-clipboard-action="copy" data-clipboard-target="#ghosttweet">Copiar</a>
