Replaced work-related information with personal information

--- a/index.html
+++ b/index.html
@@ -17,11 +17,6 @@
 		<script src="js/clipboard.min.js" async></script>
 		<script src="vendor/waves/waves.min.js" async></script>
 		<script src="vendor/wow/wow.min.js" async></script>
-		<!--
-		Guido Emiliano Tálamo
-		DWM2A - 2017
-		Profesor Omar Toyos
-	-->
 	</head>
 	
 	<body>
@@ -49,12 +44,8 @@
 			<div data-role="panel" id="leftpanel" data-display="overlay"> 
 				<img src="res/assets/tweetdrafter.png" alt="Tweetdrafter">
 				<h1>tweetdrafter</h1>
-				<ul>
-					<li>Guido Emiliano Tálamo</li>
-					<li>DWM2A - 2017</li>
-					<li>Interacción con Dispositivos Móviles</li>
-					<li>Profesor Omar Toyos</li>
-				</ul>
+				<h2>By Emiliano Tálamo <br>with &hearts;</h2>
+				<a href="https://github.com/EmilianoTalamo/tweetdrafter"></a>
 			</div>
 		</div>
 		
